exposed all program flags incl NON_STD and NEW_EL, made various ta_math guys have name field that is HIDDEN_INLINE, first pass at demo reorg -- not sure about make stuff for that..

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,16 +1,11 @@
 pkgdata_testdir = $(pkgdatadir)/test
 
 dist_pkgdata_test_DATA =\
-	12ax4s_demo.proj \
 	SimpleLines5x5.dtbl \
 	random_assoc_5x5_25.dtbl \
 	leabra_startup.css \
 	toaster.jpg \
 	giraffe.jpg \
 	imgproc_test.proj \
-	bp_xor.proj \
-	12ax4s_demo_v4.proj \
 	leabra_ra.proj \
-	ra3_2.proj \
-	model_and_task_v4.proj \
-	simple_vis_search.proj
+	ra3_2.proj
