--- a/configure.ac
+++ b/configure.ac
@@ -26,7 +26,7 @@ dnl
 dnl Subst variables that start with PL_ are used in the plugin configuration
 
 # Set binary version here. The format allows for 99.99.99abc
-AC_INIT([pdp],[4.0.3rc1],[pdp-discuss@psych-srv3.Colorado.EDU],[pdp++]) 
+AC_INIT([pdp],[4.0.4],[pdp-discuss@psych-srv3.Colorado.EDU],[pdp++]) 
 # Change both of these
 LIB_VERSION=1:0:0   #Set library version here
 LIB_VERSION_2=1.0.0
