--- a/plugins/config.pri.in
+++ b/plugins/config.pri.in
@@ -10,6 +10,7 @@ CONFIG += qt_no_framework
 PDP4_DIR = $$(PDP4DIR)
 
 win32 {
+  CONFIG += dll
 #TODO: need to pass in the msvc target, ex Debug or Release (for pathing)
 #MSVC_TARGET = Debug
 
