* added autoexpand/select to Wizard new gui & other new wiz funs, dupl get   rval call on it, layerwriter auto, new monitor, init name units, and proably more.. * select view tab with url in doc, do callfun from url: http://grey.colorado.edu/pdp/index.php/TaDoc -- doc should now be "turing complete" in being able to do anything we might want! * emacs keys for all QTextEdit guys (iTextEdit class added) * fixed all the call_init things from proglibs I am now ready to start making the self-documented build everything tutorial!

--- a/src/taiqtso/Makefile.am
+++ b/src/taiqtso/Makefile.am
@@ -28,6 +28,7 @@ HEADS =\
 	ibutton.h \
 	iscrollarea.h \
 	itextbrowser.h \
+	itextedit.h \
 	test_iflowbox.h \
 	test_iflowlayout.h \
 	test_simplewidgets.h \
@@ -70,6 +71,8 @@ SRCS =\
 	iscrollarea.moc.cpp \
 	itextbrowser.cpp \
 	itextbrowser.moc.cpp \
+	itextedit.cpp \
+	itextedit.moc.cpp \
 	taiqtso_ti.cpp
 
 include_HEADERS = $(HEADS) $(TAHEADS)
