demos: sim_tutorial.proj

--- a/demo/leabra/Makefile.am
+++ b/demo/leabra/Makefile.am
@@ -3,4 +3,6 @@ pkgdata_leabradir = $(pkgdatadir)/demo/leabra
 dist_pkgdata_leabra_DATA =\
 	12ax4s.proj \
 	model_and_task.proj \
-	simple_vis_search.proj
+	simple_vis_search.proj \
+	sim_tutorial.proj \
+	sim_tutorial_final.proj
