bin/libs now Emergent and everything compiles and works. Next is putting the Toolkit in its own package

--- a/emergent/src/bp/Makefile.am
+++ b/emergent/src/bp/Makefile.am
@@ -7,7 +7,7 @@ VPATH = @srcdir@
 
 TAHEADS =\
 	../ta/ta_TA_type.h \
-	../pdp/pdp_TA_type.h \
+	../emergent/emergent_TA_type.h \
 	bp.h \
 	rbp.h \
 	bp_v3_compat.h
@@ -29,7 +29,7 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
-	libbp_TypeAccess@PDP_SUFFIX@.la \
+	libbp_EmergentToolkit@PDP_SUFFIX@.la \
 	libbp@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 
 libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
@@ -37,17 +37,17 @@ libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
 libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
 libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libbp_TypeAccess@PDP_SUFFIX@.la
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libbp_EmergentToolkit@PDP_SUFFIX@.la
 
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libbp_TypeAccess@PDP_SUFFIX@.la
+libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libbp_EmergentToolkit@PDP_SUFFIX@.la
 
-libbp_TypeAccess@PDP_SUFFIX@_la_SOURCES =\
+libbp_EmergentToolkit@PDP_SUFFIX@_la_SOURCES =\
 	bp_TA.cpp \
 	bp_TA_type.h \
 	bp_TA_inst.h
 
-libbp_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
+libbp_EmergentToolkit@PDP_SUFFIX@_la_CPPFLAGS = $(libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 
-libbp_TypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -O0
+libbp_EmergentToolkit@PDP_SUFFIX@_la_CXXFLAGS = -O0
 
 bp_def.h:
