--- a/emergent/src/cs/Makefile.am
+++ b/emergent/src/cs/Makefile.am
@@ -7,7 +7,7 @@ VPATH = @srcdir@
 
 TAHEADS =\
 	../ta/ta_TA_type.h \
-	../pdp/pdp_TA_type.h \
+	../emergent/emergent_TA_type.h \
 	cs.h \
 	cs_v3_compat.h
 
@@ -26,7 +26,7 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
-	libcs_TypeAccess@PDP_SUFFIX@.la \
+	libcs_EmergentToolkit@PDP_SUFFIX@.la \
 	libcs@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 
 libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
@@ -34,17 +34,17 @@ libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
 libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
 libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libcs_TypeAccess@PDP_SUFFIX@.la
+libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libcs_EmergentToolkit@PDP_SUFFIX@.la
 
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libcs_TypeAccess@PDP_SUFFIX@.la
+libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libcs_EmergentToolkit@PDP_SUFFIX@.la
 
-libcs_TypeAccess@PDP_SUFFIX@_la_SOURCES =\
+libcs_EmergentToolkit@PDP_SUFFIX@_la_SOURCES =\
 	cs_TA.cpp \
 	cs_TA_type.h \
 	cs_TA_inst.h
 
-libcs_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
+libcs_EmergentToolkit@PDP_SUFFIX@_la_CPPFLAGS = $(libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 
-libcs_TypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -O0
+libcs_EmergentToolkit@PDP_SUFFIX@_la_CXXFLAGS = -O0
 
 cs_def.h:
