--- a/src/emergent/cs/Makefile.am
+++ b/src/emergent/cs/Makefile.am
@@ -6,15 +6,14 @@ srcdir = @srcdir@
 VPATH = @srcdir@
 
 TAHEADS =\
-	../ta/ta_TA_type.h \
-	../emergent/emergent_TA_type.h \
+	../../temt/ta/ta_TA_type.h \
+	../network/emergent_TA_type.h \
 	cs.h \
 	cs_v3_compat.h
 
 HEADS=\
 	cs.h \
 	cs_v3_compat.h
-
 
 SRCS=\
 	cs.cpp \
