--- a/src/temt/css_bin/Makefile.am
+++ b/src/temt/css_bin/Makefile.am
@@ -15,16 +15,16 @@ css@PDP_SUFFIX@_SOURCES = main.cpp
 
 if LIBTA
 css@PDP_SUFFIX@_LDADD =\
-	@abs_top_builddir@/src/ta_lib/libtacss@PDP_SUFFIX@-@PACKAGE_VERSION@.la
+	@abs_top_builddir@/src/temt/ta_lib/libtacss@PDP_SUFFIX@-@PACKAGE_VERSION@.la
 else
 css@PDP_SUFFIX@_LDADD =\
-	@abs_top_builddir@/src/tamisc/libtamisc@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
-	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
-	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@-@PACKAGE_VERSION@.la
+	@abs_top_builddir@/src/temt/tamisc/libtamisc@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
+	@abs_top_builddir@/src/temt/css/libcss@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
+	@abs_top_builddir@/src/temt/ta/libta@PDP_SUFFIX@-@PACKAGE_VERSION@.la
 
 if TA_GUI
 css@PDP_SUFFIX@_LDADD +=\
-	@abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@_@PACKAGE_VERSION@.la
+	@abs_top_builddir@/src/temt/taiqtso/libtaiqtso@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 endif
 endif
 
