--- a/src/temt/ta_lib/Makefile.am
+++ b/src/temt/ta_lib/Makefile.am
@@ -14,12 +14,12 @@ libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES =
 # Dummy C++ source to cause C++ linking.
 nodist_EXTRA_libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = dummy.cxx
 libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD =\
-	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@.la \
-	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@_@PACKAGE_VERSION@.la
+	@abs_top_builddir@/src/temt/css/libcss@PDP_SUFFIX@_@PACKAGE_VERSION@.la \
+	@abs_top_builddir@/src/temt/ta/libta@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 
 if TA_GUI
 libtacss@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD +=\
-	@abs_top_builddir@/src/taiqtso/libtaiqtso@PDP_SUFFIX@_@PACKAGE_VERSION@.la
+	@abs_top_builddir@/src/temt/taiqtso/libtaiqtso@PDP_SUFFIX@_@PACKAGE_VERSION@.la
 endif
 
 
