--- a/Maketa.am
+++ b/Maketa.am
@@ -43,16 +43,16 @@ MAKETA_FLAGS =\
 	-css \
 	-cpp="@CXXCPP@" \
 	-I@abs_top_srcdir@ \
-	-I@abs_top_srcdir@/src/ta/ios-g++-3.1 \
-	-I@abs_top_srcdir@/src/ta \
-	-I@abs_top_srcdir@/src/emergent \
-	-I@abs_top_srcdir@/src/css \
-	-I@abs_top_srcdir@/src/leabra \
-	-I@abs_top_srcdir@/src/taiqtso \
-	-I@abs_top_srcdir@/src/bp \
+	-I@abs_top_srcdir@/src/temt/ta/ios-g++-3.1 \
+	-I@abs_top_srcdir@/src/temt/ta \
+	-I@abs_top_srcdir@/src/temt/css \
+	-I@abs_top_srcdir@/src/emergent/network \
+	-I@abs_top_srcdir@/src/emergent/leabra \
+	-I@abs_top_srcdir@/src/emergent/taiqtso \
+	-I@abs_top_srcdir@/src/emergent/bp \
 	-I${QTDIR}/include/QtCore \
 	@MAKETA_CXXFLAGS@
 
 BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
 
-MAKETA = ../maketa/./maketa
+MAKETA = ../../temt/maketa/./maketa
