--- a/css_lib/Makefile.am
+++ b/css_lib/Makefile.am
@@ -1,4 +1,4 @@
-pkgdata_css_stdlibdir = $(pkgdatadir)/css_stdlib
+pkgdata_css_stdlibdir = $(pkgdatadir)/css_lib
 
 dist_pkgdata_css_stdlib_DATA =\
 	leabra_startup.css \
