--- a/src/temt/css_bin/Makefile.am
+++ b/src/temt/css_bin/Makefile.am
@@ -13,20 +13,8 @@ bin_PROGRAMS = css@PDP_SUFFIX@
 
 css@PDP_SUFFIX@_SOURCES = main.cpp
 
-if LIBTA
 css@PDP_SUFFIX@_LDADD =\
-	@abs_top_builddir@/src/temt/lib/libtacss@PDP_SUFFIX@-@PACKAGE_VERSION@.la
-else
-css@PDP_SUFFIX@_LDADD =\
-	@abs_top_builddir@/src/temt/tamisc/libtamisc@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
-	@abs_top_builddir@/src/temt/css/libcss@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
-	@abs_top_builddir@/src/temt/ta/libta@PDP_SUFFIX@-@PACKAGE_VERSION@.la
-
-if TA_GUI
-css@PDP_SUFFIX@_LDADD +=\
-	@abs_top_builddir@/src/temt/taiqtso/libtaiqtso@PDP_SUFFIX@_@PACKAGE_VERSION@.la
-endif
-endif
+	@abs_top_builddir@/src/temt/lib/libtemt@PDP_SUFFIX@-@PACKAGE_VERSION@.la
 
 css@PDP_SUFFIX@_CPPFLAGS = @PDP_INCLUDES@
 css@PDP_SUFFIX@_CXXFLAGS = @OPT_LEVEL@
