hopefully final cleanup of pdp->emergent, plus some residual final cleanup of things like pdpMisc which had just a few items needing to move to ta PDP4DIR -> TEMTDIR (very few people will use this anyway..) one last thing is pdpserver which I just left -- presumably to be moved into a plugin and redone and then ultimately into ta.

--- a/postinstall-pak.in
+++ b/postinstall-pak.in
@@ -3,7 +3,7 @@
 # It sucks. Hopefully they will fix it, otherwise we need
 # to stop using CheckInstall.
 ln -s /usr/local/lib/libpdp-@PACKAGE_VERSION@.so.@LIB_VERSION_2@ /usr/local/lib/libpdp-@PACKAGE_VERSION@.so.1
-ln -s /usr/local/lib/libtacss-@PACKAGE_VERSION@.so.@LIB_VERSION_2@ /usr/local/lib/libtacss-@PACKAGE_VERSION@.so.1
+ln -s /usr/local/lib/libtemt-@PACKAGE_VERSION@.so.@LIB_VERSION_2@ /usr/local/lib/libtemt-@PACKAGE_VERSION@.so.1
 ln -s /usr/local/lib/libSoQt.so.20.4.1 /usr/local/lib/libSoQt.so.20
 ln -s /usr/local/lib/libCoin.so.40.4.5 /usr/local/lib/libCoin.so.40
 
