--- a/src/emergent/network/Makefile.am
+++ b/src/emergent/network/Makefile.am
@@ -8,71 +8,66 @@ VPATH = @srcdir@
 if TA_GUI
 
 TAHEADS_GUI =\
-	pdpview_qt.h \
 	pdpserver_qt.h \
 	netstru_so.h \
 	netstru_qtso.h \
-	pdp_qtso.h \
-	pdp_program_qtso.h 
+	emergent_qtso.h \
+	emergent_program_qtso.h 
 
 HEADS_GUI =\
-	pdpview_qt.h \
 	pdpserver_qt.h \
 	netstru_so.h \
 	netstru_qtso.h \
-	pdp_qtso.h \
-	pdp_program_qtso.h 
+	emergent_qtso.h \
+	emergent_program_qtso.h 
 
 SRCS_GUI =\
-	pdpview_qt.cpp \
 	pdpserver_qt.cpp \
 	netstru_so.cpp \
-	pdp_qtso.cpp \
+	emergent_qtso.cpp \
 	netstru_qtso.cpp \
 	netstru_qtso.moc.cpp \
-	pdp_program_qtso.cpp
+	emergent_program_qtso.cpp
 
 endif
 
 TAHEADS =\
 	../../temt/ta/ta_TA_type.h \
-	pdpdeclare.h \
-	pdp_base.h \
+	emergent_base.h \
 	spec.h \
 	netstru.h \
 	netstru_extra.h \
 	netdata.h \
-	pdp_program.h \
-	pdp_project.h \
+	emergent_program.h \
+	emergent_project.h \
 	pdpserver.h \
 	$(TAHEADS_GUI) \
 	v3_compat.h
 
 HEADS =\
-	pdpdeclare.h \
-	pdp_base.h \
+	emergent_base.h \
 	spec.h \
 	netstru.h \
 	netstru_extra.h \
 	netdata.h \
-	pdp_program.h \
-	pdp_project.h \
+	emergent_program.h \
+	emergent_project.h \
 	pdpserver.h \
 	v3_compat.h \
 	$(HEADS_GUI)
 
 SRCS =\
-	pdp_base.cpp \
+	emergent_base.cpp \
 	spec.cpp \
 	netstru.cpp \
 	netstru_extra.cpp \
 	netdata.cpp \
-	pdp_program.cpp \
-	pdp_project.cpp \
+	emergent_program.cpp \
+	emergent_project.cpp \
 	pdpserver.cpp \
 	pdpserver.moc.cpp \
 	$(SRCS_GUI) \
-	pdp_ti.cpp \
+	emergent_ti.cpp \
 	v3_compat.cpp
 
 
@@ -97,4 +92,4 @@ libemergentEmergentToolkit@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES =\
 libemergentEmergentToolkit@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = $(libemergent@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 libemergentEmergentToolkit@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = -g -O0
 
-pdp_def.h:
+emergent_def.h:
